[project]
name = "orbit"
version = "0.1.0"
description = ""
authors = [
    {name = "Grigory Malanchuk",email = "grigorymalanchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "watchfiles (>=1.1.0,<2.0.0)",
    "alembic-autogenerate-enums (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
